--- a/react-canva/package.json
+++ b/react-canva/package.json
@@ -2,7 +2,7 @@
   "name": "react-canva",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:5000/",
+  "proxy": "http://localhost:5000/",
   "dependencies": {
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
@@ -13,6 +13,7 @@
     "json-server": "^0.16.1",
     "json-server-auth": "^1.2.1",
     "react": "^16.13.0",
+    "react-color": "^2.18.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
