--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "bulma": "^0.8.0",
     "json-server": "^0.16.1",
     "json-server-auth": "^1.2.1",
     "react": "^16.13.0",
