--- a/package.json
+++ b/package.json
@@ -16,6 +16,14 @@
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.4",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "react-bootstrap": "^1.0.0-beta.17",
+    "resolve-url-loader": "^3.1.1"
+  },
+  "devDependencies": {
+    "bootstrap": "^4.4.1",
+    "bootstrap-loader": "^3.0.4",
+    "jquery": "^3.4.1",
+    "tether": "^1.4.7"
   }
 }
