--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bulma": "^0.8.0",
+    "html-to-image": "^0.1.1",
     "json-server": "^0.16.1",
     "json-server-auth": "^1.2.1",
     "react": "^16.13.0",
